# devcontainer_example

./: .devcontainer.json  Dockerfile  README.md  pyproject.toml
script/: main.py
